summary-table.tex changed for context switch. CPU part offically done
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/summary-table.tex
+++ b/report/src/summary-table.tex
@@ -28,12 +28,9 @@ thr\_create() thread first time	& 20 cycles & 8000 cycles		& 8000 cycles &  2273
 thr\_create() thread 	average	& 20 cycles & 8000 cycles		& 8000 cycles &  157433.27 cycles \\ \hline\hline
 
 
-process context switch 	& 200 cycles		&	2000000 cycles	&2000000 cycles	& 2010805.721 cycles \\
-\hline
-thread context switch 	& 200 cycles		&	1500000 cycles	&1500000 cycles	& 1895295.586 cycles \\ 
-\hline
-pipe overhead			& 200 cycles		&	30000 cycles	&30000 cycles	& 45275.283 cycles \\ 
-\hline
+Process context switch 	& 5000 cycles	& 30000 cycles	& 150000 cycles	& 100540.28 cycles \\ \hline
+Thread context switch 	& 2000 cycles	& 20000 cycles	& 75000 cycles	& 94764.77 cycles \\ \hline
+Pipe overhead		& 200 cycles	& 800 cylces	& 1000 cycles	& 2263.07 cycles \\ \hline
 
 \end{tabular}
 \end{center}
