--- a/report/src/system-measurement-project.tex
+++ b/report/src/system-measurement-project.tex
@@ -48,8 +48,7 @@
 \newcommand{\newchapter}[1]{\chapter{\textcolor{blue}{#1}}}
 \newcommand{\starchapter}[1]{\chapter*{\textcolor{blue}{#1}}}
 
-\author{Qihua Wu\\
-Yann Léger}
+\author{Yann Léger\\Qihua Wu}
 \title{CSE221: System Measurement Project}
 
 \begin{document}
