network peak bandwidth table up for summary-table
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/summary-table.tex
+++ b/report/src/summary-table.tex
@@ -99,7 +99,18 @@ Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 8 ms\\ \hline
 Operation 			& Hardware cost 	& Software cost 	& Prediction	& Measured \\ \hline
 
 %%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
+%%peak bandwidth
+Local peak bandwidth	&  2161 MB/s	& 23 ms/GB	&  1455 MB/s &  1132MB/s \\
+\hline
+Remote peak bandwidth 	&  11.25 MB/s	& 0 &  11.25MB/s	&  10.56MB/s \\
+\hline\hline
+
+
+%%%%%%%%%%%%%%%%%
+
+
+
+
 
 \end{tabular}
 \end{center}
