--- a/report/src/experiments-filesystem.tex
+++ b/report/src/experiments-filesystem.tex
@@ -168,23 +168,23 @@ size of the file randomly.
 \hline
 Read file size & Hardware cost & Software cost & Prediction & Measured \\ \hline
 
-16MB Random		& ?		& ?       & ?        & 0.022  ms/block \\ \hline
-32MB Random		& ?		& ?       & ?        & 2.157  ms/block \\ \hline
-64MB Random		& ?		& ?       & ?        & 1.357  ms/block \\ \hline
-128MB Random 		& ?		& ?       & ?        & 8.980  ms/block \\ \hline
-256MB Random		& ?		& ?       & ?        & 9.962  ms/block \\ \hline
-512MB Random		& ?		& ?       & ?        & 10.361  ms/block \\ \hline
-1024MB Random		& ?		& ?       & ?        & 10.488  ms/block \\ \hline
-2048MB Random		& ?		& ?       & ?        & 10.788  ms/block \\ \hline\hline
-
-16MB Sequential		& ?		& ?       & ?        & 0.070   ms/block \\ \hline
-32MB Sequential		& ?		& ?       & ?        & 0.717   ms/block \\ \hline
-64MB Sequential		& ?		& ?       & ?        & 0.439   ms/block \\ \hline
-128MB Sequential 	& ?		& ?       & ?        & 6.876   ms/block \\ \hline
-256MB Sequential	& ?		& ?       & ?        & 7.717   ms/block \\ \hline
-512MB Sequential	& ?		& ?       & ?        & 8.687   ms/block \\ \hline
-1024MB Sequential	& ?		& ?       & ?        & 8.721   ms/block \\ \hline
-2048MB Sequential	& ?		& ?       & ?        & 8.826   ms/block \\ \hline\hline
+16MB Random		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.022  ms/block \\ \hline
+32MB Random		& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 2.157  ms/block \\ \hline
+64MB Random		& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 1.357  ms/block \\ \hline
+128MB Random 		& 8 ms/block		& 300 ns/block     & 8 ms/block	       & 8.980  ms/block \\ \hline
+256MB Random		& 9 ms/block		& 300 ns/block     & 9 ms/block	       & 9.962  ms/block \\ \hline
+512MB Random		& 10 ms/block		& 300 ns/block     & 10 ms/block	        & 10.361  ms/block \\ \hline
+1024MB Random		& 11 ms/block		& 300 ns/block     & 11 ms/block	        & 10.488  ms/block \\ \hline
+2048MB Random		& 12 ms/block		& 300 ns/block     & 12 ms/block	        & 10.788  ms/block \\ \hline\hline
+                                                                                   
+16MB Sequential		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.070   ms/block \\ \hline
+32MB Sequential		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.717   ms/block \\ \hline
+64MB Sequential		& 0.65 ms/block		& 300 ns/block     & 0.65 ms/block	        & 0.439   ms/block \\ \hline
+128MB Sequential 	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 6.876   ms/block \\ \hline
+256MB Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 7.717   ms/block \\ \hline
+512MB Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.687   ms/block \\ \hline
+1024MB Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.721   ms/block \\ \hline
+2048MB Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.826   ms/block \\ \hline\hline
 
 \end{tabular}
 \end{center}
@@ -238,21 +238,21 @@ It implies a minimum latency of 13 ms per block.
 Operation & Hardware cost & Software cost & Prediction & Measured \\
 \hline
 
-16MB Random		& ?		& ?       & ?        & 0.026   ms/block \\ \hline
-32MB Random		& ?		& ?       & ?        & 0.025   ms/block \\ \hline
-64MB Random		& ?		& ?       & ?        & 0.026   ms/block \\ \hline
-128MB Random 		& ?		& ?       & ?        & 0.028   ms/block \\ \hline
-256MB Random		& ?		& ?       & ?        & 0.027   ms/block \\ \hline
-512MB Random		& ?		& ?       & ?        & 15.401   ms/block \\ \hline
-1024MB Random		& ?		& ?       & ?        & 58.903   ms/block \\ \hline\hline
+16MB Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.026   ms/block \\ \hline
+32MB Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.025   ms/block \\ \hline
+64MB Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.026   ms/block \\ \hline
+128MB Random 	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.028   ms/block \\ \hline
+256MB Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.027   ms/block \\ \hline
+512MB Random	& 13 ms/block	& 600 ns/block  & 13 ms/block	& 15.401   ms/block \\ \hline
+1024MB Random	& 18 ms/block	& 600 ns/block  & 18 ms/block	& 58.903   ms/block \\ \hline\hline
 
-16MB Sequential	& ?		& ?       & ?        & 0.029    ms/block \\ \hline
-32MB Sequential	& ?		& ?       & ?        & 0.020    ms/block \\ \hline
-64MB Sequential	& ?		& ?       & ?        & 0.019    ms/block \\ \hline
-128MB Sequential 	& ?		& ?       & ?        & 0.020    ms/block \\ \hline
-256MB Sequential	& ?		& ?       & ?        & 0.019    ms/block \\ \hline
-512MB Sequential	& ?		& ?       & ?        & 4.919    ms/block \\ \hline
-1024MB Sequential	& ?		& ?       & ?        & 8.725    ms/block \\ \hline\hline 
+16MB Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.029    ms/block \\ \hline
+32MB Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.020    ms/block \\ \hline
+64MB Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.019    ms/block \\ \hline
+128MB Sequential 	& 0.1 ms/block & 600 ns/block       & 0.1 ms/block        & 0.020    ms/block \\ \hline
+256MB Sequential	& 0.1 ms/block & 600 ns/block      & 0.1 ms/block       & 0.019    ms/block \\ \hline
+512MB Sequential	& 6 ms/block   & 600 ns/block      & 6 ms/block       & 4.919    ms/block \\ \hline
+1024MB Sequential	& 10 ms/block  & 600 ns/block      & 10 ms/block       & 8.725    ms/block \\ \hline\hline 
 
 \end{tabular}
 \end{center}
@@ -265,6 +265,7 @@ All the result except the big random read are lower than what the network card
 permits.
 The large sequential reads are partly cached which significally reduces the
 result.
+The memory seems to be faster than on the solaris virtual machine.
 
 \paragraph{Success of Methodology}
 We should have repeated the experiment by desactivating the cache on the client
@@ -300,12 +301,12 @@ This mainly hardware cost.
 \hline
 Operation & Hardware cost & Software cost & Prediction & Measured \\
 \hline
-1 process	& 8 ms/block	& ?       & ?        & 8.942    ms/block \\ \hline
-2 processes	& 16 ms/block	& ?       & ?        & 2.664    ms/block \\ \hline
-4 processes	& 32 ms/block	& ?       & ?        & 23.693    ms/block \\ \hline
-8 processes	& 64 ms/block	& ?       & ?        & 64.129    ms/block \\ \hline
-16 processes	& 128 ms/block	& ?       & ?        & 121.170    ms/block \\ \hline
-32 processes	& 256 ms/block	& ?       & ?        & 221.781    ms/block \\ \hline
+1 process	& 8 ms/block	& 300 ns/block       & 8 ms/block        & 8.942    ms/block \\ \hline
+2 processes	& 16 ms/block	& 300 ns/block       & 16 ms/block       & 2.664    ms/block \\ \hline
+4 processes	& 32 ms/block	& 300 ns/block       & 32 ms/block       & 23.693    ms/block \\ \hline
+8 processes	& 64 ms/block	& 300 ns/block       & 64 ms/block       & 64.129    ms/block \\ \hline
+16 processes	& 128 ms/block	& 300 ns/block       & 128 ms/block      & 121.170    ms/block \\ \hline
+32 processes	& 256 ms/block	& 300 ns/block       & 256 ms/block      & 221.781    ms/block \\ \hline
 
 \end{tabular}
 \end{center}
