oops, why didn't I commit earlier
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -1,5 +1,5 @@
 \section{Machine Description}
-The machine is a virtual machine running on top of a xen hypervisor, the
+The machine is a virtual machine running on top of a Xen hypervisor, the
 description mainly concern the hardware of the hypervisor.
 
 \subsection{Processor}
