--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -325,13 +325,11 @@ Pipe overhead		& 200 cycles	& 800 cylces	& 1000 cycles	& 2263.07 cycles \\ \hlin
 \end{table}
 
 The context switch time of a thread is relatively high.
-Globally
 We can see in table \ref{tab:context-switch-time}, that the
 time it takes to context switch between threads is a little bit shorter
 than the one for processes.
-This is due 
 
 \paragraph{Success of Methodology}
-Working set really small.
+The Working set is really small so it may not reproduce correctly the cost.
 
 
