finalized summary-table.tex
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/summary-table.tex
+++ b/report/src/summary-table.tex
@@ -150,9 +150,39 @@ Operation 			& Hardware cost 	& Software cost 	& Prediction	& Measured \\ \hline
 
 
 % File read time%%%%%%%%%%%%%%
+16MB Local Random		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.022  ms/block \\ \hline
+32MB Local Random		& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 2.157  ms/block \\ \hline
+64MB Local Random		& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 1.357  ms/block \\ \hline
+128MB Local Random 		& 8 ms/block		& 300 ns/block     & 8 ms/block	       & 8.980  ms/block \\ \hline
+256MB Local Random		& 9 ms/block		& 300 ns/block     & 9 ms/block	       & 9.962  ms/block \\ \hline
+512MB Local Random		& 10 ms/block		& 300 ns/block     & 10 ms/block	        & 10.361  ms/block \\ \hline
+1024MB Local Random		& 11 ms/block		& 300 ns/block     & 11 ms/block	        & 10.488  ms/block \\ \hline
+2048MB Local Random		& 12 ms/block		& 300 ns/block     & 12 ms/block	        & 10.788  ms/block \\ \hline\hline
+                                                                                   
+16MB Local Sequential		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.070   ms/block \\ \hline
+32MB Local Sequential		& 0.1 ms/block		& 300 ns/block     & 0.1 ms/block	        & 0.717   ms/block \\ \hline
+64MB Local Sequential		& 0.65 ms/block		& 300 ns/block     & 0.65 ms/block	        & 0.439   ms/block \\ \hline
+128MB Local Sequential 	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 6.876   ms/block \\ \hline
+256MB Local Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 7.717   ms/block \\ \hline
+512MB Local Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.687   ms/block \\ \hline
+1024MB Local Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.721   ms/block \\ \hline
+2048MB Local Sequential	& 1.3 ms/block		& 300 ns/block     & 1.3 ms/block	        & 8.826   ms/block \\ \hline\hline
 
+16MB Remote Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.026   ms/block \\ \hline
+32MB Remote Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.025   ms/block \\ \hline
+64MB Remote Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.026   ms/block \\ \hline
+128MB Remote Random 	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.028   ms/block \\ \hline
+256MB Remote Random	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block	& 0.027   ms/block \\ \hline
+512MB Remote Random	& 13 ms/block	& 600 ns/block  & 13 ms/block	& 15.401   ms/block \\ \hline
+1024MB Remote Random	& 18 ms/block	& 600 ns/block  & 18 ms/block	& 58.903   ms/block \\ \hline\hline
 
-
+16MB Remote Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.029    ms/block \\ \hline
+32MB Remote Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.020    ms/block \\ \hline
+64MB Remote Sequential	& 0.1 ms/block	& 600 ns/block  & 0.1 ms/block        & 0.019    ms/block \\ \hline
+128MB Remote Sequential 	& 0.1 ms/block & 600 ns/block       & 0.1 ms/block        & 0.020    ms/block \\ \hline
+256MB Remote Sequential	& 0.1 ms/block & 600 ns/block      & 0.1 ms/block       & 0.019    ms/block \\ \hline
+512MB Remote Sequential	& 6 ms/block   & 600 ns/block      & 6 ms/block       & 4.919    ms/block \\ \hline
+1024MB Remote Sequential	& 10 ms/block  & 600 ns/block      & 10 ms/block       & 8.725    ms/block \\ \hline\hline 
 
 
 
@@ -175,10 +205,33 @@ Operation 			& Hardware cost 	& Software cost 	& Prediction	& Measured \\ \hline
 
 
 %file cache%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+128MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1205.06 MB/s \\ \hline
+256MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1182.96 MB/s \\ \hline
+384MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1196.82 MB/s \\ \hline
+512MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1225.79 MB/s \\ \hline
+640MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1253.05 MB/s \\ \hline
+768MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1244.87 MB/s \\ \hline
+896MB  & 4GB/s   & 79ms/GB & 3.59GB/s & 1260.24 MB/s \\ \hline
+1024MB & 4GB/s   & 79ms/GB & 3.59GB/s & 1256.54 MB/s \\ \hline
+1152MB & 4GB/s   & 79ms/GB & 3.59GB/s & 1249.65 MB/s \\ \hline
+1280MB & 4GB/s   & 79ms/GB & 3.59GB/s & 1234.26 MB/s \\ \hline
+1408MB & 100MB/s & ?       & ?        & 84.5288 MB/s \\ \hline
+1536MB & 100MB/s & ?       & ?        & 66.2602 MB/s \\ \hline
+1664MB & 100MB/s & ?       & ?        & 86.7509 MB/s \\ \hline
+1792MB & 100MB/s & ?       & ?        & 77.2734 MB/s \\ \hline
+1920MB & 100MB/s & ?       & ?        & 81.6763 MB/s \\ \hline
+2048MB & 100MB/s & ?       & ?        & 83.2122 MB/s \\ \hline
+2176MB & 100MB/s & ?       & ?        & 80.2009 MB/s \\ \hline
+2304MB & 100MB/s & ?       & ?        & 72.7354 MB/s \\ \hline
+2432MB & 100MB/s & ?       & ?        & 78.0652 MB/s \\ \hline\hline
 
 % Contention%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+1 process	& 8 ms/block	& 300 ns/block       & 8 ms/block        & 8.942    ms/block \\ \hline
+2 processes	& 16 ms/block	& 300 ns/block       & 16 ms/block       & 2.664    ms/block \\ \hline
+4 processes	& 32 ms/block	& 300 ns/block       & 32 ms/block       & 23.693    ms/block \\ \hline
+8 processes	& 64 ms/block	& 300 ns/block       & 64 ms/block       & 64.129    ms/block \\ \hline
+16 processes	& 128 ms/block	& 300 ns/block       & 128 ms/block      & 121.170    ms/block \\ \hline
+32 processes	& 256 ms/block	& 300 ns/block       & 256 ms/block      & 221.781    ms/block \\ \hline
 
 
 
